--- a/Terms_4.13.html
+++ b/Terms_4.13.html
@@ -65,111 +65,27 @@
   <!-- גריד רספונסיבי -->
   <div class="vbt-grid">
 
-    <!-- ===== צלם אלוהים ===== -->
+    <!-- ===== דת ומדע ===== -->
     <div class="vbt-acc">
       <input class="vbt-toggle" type="checkbox" id="vbt-t1" />
       <label class="vbt-summary" for="vbt-t1" role="button" tabindex="0">
         <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">צלם אלוהים</span>
+        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">דת ומדע</span>
       </label>
       <div class="vbt-panel">
-        צלם אלוהים (Tzelem Elohim): התפיסה כי כל אדם נברא בצלם אלוהים, ומכאן שיש לו ערך וכבוד אינהרנטיים.
+        דת ומדע:  שני אופני הבנה של המציאות, שלעיתים נתפסים כניגודים ולעיתים כמשלימים. המדע מבוסס על תצפיות, חוקים טבעיים ושיטתיות אמפירית, בעוד הדת עוסקת במשמעות, מוסר וטרנסצנדנטיות. שאלת היחס בין הדת למדע מלווה את ההגות היהודית. הרב זקס טוען שהם משלימים זה את זה.
       </div>
     </div>
 
-    <!-- ===== דיאלוג ===== -->
+    <!-- ===== קיימות ===== -->
     <div class="vbt-acc">
       <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
       <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
         <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">דיאלוג</span>
+        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">קיימות</span>
       </label>
       <div class="vbt-panel">
-        דיאלוג: תהליך של תקשורת מכבדת שמטרתו הבנה הדדית ולמידה, ולא רק ניצחון בוויכוח.
-      </div>
-    </div>
-
-    <!-- ===== אוניברסליות ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t3" />
-      <label class="vbt-summary" for="vbt-t3" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">אוניברסליות</span>
-      </label>
-      <div class="vbt-panel">
-        אוניברסליות: האמונה שערכים מסוימים תקפים לכל בני האדם, ללא תלות ברקע התרבותי או הדתי שלהם.
-      </div>
-    </div>
-
-    <!-- ===== פרטיקולריות ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t4" />
-      <label class="vbt-summary" for="vbt-t4" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">פרטיקולריות</span>
-      </label>
-      <div class="vbt-panel">
-        פרטיקולריות: הדגשת ערכים, מסורות וזהויות הייחודיים לקבוצה או תרבות מסוימת.
-      </div>
-    </div>
-
-    <!-- ===== אידיאולוגיות אוטופיות ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t5" />
-      <label class="vbt-summary" for="vbt-t5" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">אידיאולוגיות אוטופיות</span>
-      </label>
-      <div class="vbt-panel">
-        אידיאולוגיות אוטופיות: פילוסופיות פוליטיות או חברתיות השואפות ליצור חברה מושלמת, לעיתים דרך שינוי רדיקלי או כפייה רעיונית.
-      </div>
-    </div>
-
-    <!-- ===== דיאלוג בין-דתי ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t6" />
-      <label class="vbt-summary" for="vbt-t6" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">דיאלוג בין-דתי</span>
-      </label>
-      <div class="vbt-panel">
-        דיאלוג בין-דתי: תקשורת ושיתוף פעולה בין בני דתות שונות, במטרה לקדם הבנה וכבוד הדדי.
-      </div>
-    </div>
-
-    <!-- ===== קהילה ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t7" />
-      <label class="vbt-summary" for="vbt-t7" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">קהילה</span>
-      </label>
-      <div class="vbt-panel">
-        קהילה: קבוצת אנשים החולקים ערכים, אינטרסים או זהות משותפת, ופועלים יחד למען טובת הכלל.
-      </div>
-    </div>
-
-    <!-- ===== דמוקרטיה ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t8" />
-      <label class="vbt-summary" for="vbt-t8" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">דמוקרטיה</span>
-      </label>
-      <div class="vbt-panel">
-        דמוקרטיה: שיטת ממשל בה הכוח נמצא בידי העם, לרוב באמצעות נציגים נבחרים. זקס הדגיש כי דמוקרטיה חייבת להיות מעבר להצבעה בלבד.
-      </div>
-    </div>
-
-    <!-- ===== פונדמנטליזם ===== -->
-    <div class="vbt-acc">
-      <input class="vbt-toggle" type="checkbox" id="vbt-t9" />
-      <label class="vbt-summary" for="vbt-t9" role="button" tabindex="0">
-        <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">פונדמנטליזם</span>
-      </label>
-      <div class="vbt-panel">
-        פונדמנטליזם: גישה דתית הדוגלת בפרשנות מחמירה וליטרלית של כתבי הקודש.
+        קיימות: עקרון מוסרי ומעשי הדוגל בניהול משאבי הטבע והחברה באופן שיבטיח את רווחת הדורות הבאים. הרב זקס ראה בקיימות היבט של מחויבות לברית ולתיקון עולם.
       </div>
     </div>
 
