--- a/Terms_1.3.html
+++ b/Terms_1.3.html
@@ -14,8 +14,9 @@
 
     /* קפסולה */
     .vbt-terms .vbt-summary {
-      display: flex; align-items: center; justify-content: space-between; flex-direction: row; /* + מימין, i משמאל */
-      gap: 12px; direction: rtl; cursor: pointer;
+      display: flex; align-items: center; justify-content: space-between; flex-direction: row; /* סדר צפוי וקבוע */
+      gap: 12px; direction: ltr; /* ציר ראשי LTR כדי לקבע מיקומים; הטקסט יישאר RTL בתוך הכותרת */
+      cursor: pointer;
       padding: 14px 18px; border-radius: 40px; background: #F3E4FF; font-weight: 800; font-size: 18px;
       border: none; box-shadow: none; list-style: none; outline: none; transition: transform .2s ease, background-color .3s ease;
     }
@@ -23,15 +24,16 @@
     .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #0ea5e9; outline-offset: 2px; }
     .vbt-terms .vbt-toggle:checked + .vbt-summary { background: #D7F6E4; }
 
-    .vbt-terms .vbt-title { flex: 1; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: center; }
+    .vbt-terms .vbt-title { order: 2; flex: 1; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: center; direction: rtl; }
 
     /* + / − מודגש בצד ימין */
-    .vbt-terms .vbt-pm { display: inline-flex; width: 36px; height: 36px; align-items: center; justify-content: center; font-size: 30px; line-height: 1; font-weight: 900; }
+    .vbt-terms .vbt-pm { order: 3; display: inline-flex; width: 36px; height: 36px; align-items: center; justify-content: center; font-size: 30px; line-height: 1; font-weight: 900; }
     .vbt-terms .vbt-pm::before { content: '+'; }
     .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-pm::before { content: '−'; }
 
     /* i בעיגול – אדום בסגור, ירוק + סיבוב בפתוח, בצד שמאל */
     .vbt-terms .vbt-icon {
+      order: 1;
       width: 32px; height: 32px; border-radius: 50%; background: #FF2E2E; color: #fff;
       display: grid; place-items: center; font-weight: 900; transition: transform .35s ease, background-color .25s ease;
     }
@@ -43,7 +45,7 @@
       max-height: 0; overflow: hidden; opacity: 0; transform: translateY(-6px);
       transition: max-height .5s ease, opacity .45s ease, transform .45s ease, padding .45s ease;
     }
-    .vbt-terms .vbt-toggle:checked ~ .vbt-panel { padding: 16px; opacity: 1; transform: translateY(0); max-height: 4000px; }
+    .vbt-terms .vbt-toggle:checked ~ .vbt-panel { padding: 16px; opacity: 1; transform: translateY(0); }
 
     /* גריד */
     .vbt-terms .vbt-grid { display: grid; grid-template-columns: 1fr; gap: 18px; max-width: 1000px; margin: 0 auto; }
@@ -86,18 +88,33 @@
     </div>
   </div>
 
-  <!-- Auto‑Resize: פתיחה וסגירה (עם burst כדי לא לפספס כיווץ) -->
+  <!-- Auto‑Resize + Dynamic MaxHeight (Campus/Moodle) -->
   <script>
   (function () {
     function computeHeight(){
       var b = document.body, d = document.documentElement;
       return Math.max(d.scrollHeight, b.scrollHeight, d.offsetHeight, b.offsetHeight, d.clientHeight, b.clientHeight);
     }
-    function sendHeight(){ parent.postMessage({ type: 'termsHeight', height: Math.ceil(computeHeight()) }, '*'); }
+    function sendHeight(){ try { parent.postMessage({ type: 'termsHeight', height: Math.ceil(computeHeight()) }, '*'); } catch(e){} }
     function burst(ms){ var end=Date.now()+(ms||800); (function step(){ sendHeight(); if(Date.now()<end) requestAnimationFrame(step); })(); }
 
+    // ==== Dynamic panel heights to avoid inner scrolling
+    function setPanelHeight(acc){
+      var cb = acc.querySelector('.vbt-toggle');
+      var p = acc.querySelector('.vbt-panel');
+      if(!cb || !p) return;
+      if (cb.checked) {
+        p.style.maxHeight = 'none'; // reset to measure
+        var h = p.scrollHeight;
+        p.style.maxHeight = h + 'px';
+      } else {
+        p.style.maxHeight = '0px';
+      }
+    }
+    function applyHeights(){ document.querySelectorAll('.vbt-acc').forEach(setPanelHeight); }
+
     if ('ResizeObserver' in window) {
-      var ro = new ResizeObserver(function(){ requestAnimationFrame(sendHeight); });
+      var ro = new ResizeObserver(function(){ requestAnimationFrame(function(){ applyHeights(); sendHeight(); }); });
       ro.observe(document.documentElement);
       ro.observe(document.body);
       var root = document.querySelector('.vbt-terms'); if (root) ro.observe(root);
@@ -106,48 +123,27 @@
     }
 
     if ('MutationObserver' in window) {
-      var mo = new MutationObserver(function(){ setTimeout(sendHeight, 80); });
+      var mo = new MutationObserver(function(){ setTimeout(function(){ applyHeights(); sendHeight(); }, 80); });
       mo.observe(document.documentElement, { attributes:true, childList:true, subtree:true });
     }
 
-    function tick(){ requestAnimationFrame(sendHeight); }
+    function tick(){ requestAnimationFrame(function(){ applyHeights(); sendHeight(); }); }
     window.addEventListener('DOMContentLoaded', tick);
     window.addEventListener('load', tick);
     window.addEventListener('transitionrun', function(){ burst(700); }, true);
-    window.addEventListener('transitionend', function(){ setTimeout(sendHeight, 80); }, true);
-    window.addEventListener('change', function(e){ if (e.target && e.target.classList && e.target.classList.contains('vbt-toggle')) burst(800); }, true);
+    window.addEventListener('transitionend', function(){ setTimeout(function(){ applyHeights(); sendHeight(); }, 80); }, true);
+    window.addEventListener('change', function(e){ if (e.target && e.target.classList && e.target.classList.contains('vbt-toggle')) { applyHeights(); burst(800); } }, true);
     window.addEventListener('click', function(){ setTimeout(sendHeight, 140); }, true);
 
     var hb = setInterval(sendHeight, 1800);
     window.addEventListener('pagehide', function(){ clearInterval(hb); });
 
+    // initial
+    applyHeights();
     sendHeight();
 
     /* =====================
        🧪 בדיקות ידניות – הפעלה מקונסול: runTermsTests();
-       לא משנות מצב קבוע בדף.
-    ===================== */
-    function assert(cond, msg) { if (!cond) throw new Error('Test failed: ' + msg); }
-
-    // ===== התאמת גובה פנל לפי תוכן – דוחף אלמנטים למטה ללא גלילה פנימית
-    function setPanelHeight(acc){
-      var cb = acc.querySelector('.vbt-toggle');
-      var p = acc.querySelector('.vbt-panel');
-      if(!cb || !p) return;
-      if (cb.checked) {
-        p.style.maxHeight = 'none';
-        var h = p.scrollHeight;
-        p.style.maxHeight = h + 'px';
-      } else {
-        p.style.maxHeight = '0px';
-      }
-    }
-    function applyHeights(){ document.querySelectorAll('.vbt-acc').forEach(setPanelHeight); }
-    document.addEventListener('change', function(e){ if(e.target && e.target.classList && e.target.classList.contains('vbt-toggle')) { applyHeights(); } }, true);
-    window.addEventListener('resize', function(){ applyHeights(); });
-    window.addEventListener('DOMContentLoaded', function(){ applyHeights(); });
-
-    window.runTermsTests();
        לא משנות מצב קבוע בדף.
     ===================== */
     function assert(cond, msg) { if (!cond) throw new Error('Test failed: ' + msg); }
@@ -161,12 +157,10 @@
       function pseudo(el){ var c = getComputedStyle(el, '::before').content || ''; return c.replace(/^(["'])|(["'])$/g,''); }
 
       assert(!!acc && !!btn && !!panel && !!cb, 'אלמנטים קיימים');
+      assert(!cb.checked, 'ברירת מחדל: סגור');
+      assert(pseudo(pm) === '+', 'בסגור: + מוצג');
 
-      // ברירת מחדל – סגור
-      assert(!cb.checked, 'checkbox סגור בהתחלה');
-      assert(pseudo(pm) === '+', 'בסגור: +');
-
-      // בדיקת מיקום: + מימין, i משמאל
+      // מיקום: + מימין, i משמאל
       var rPlus = pm.getBoundingClientRect();
       var rI = icon.getBoundingClientRect();
       assert(rPlus.left > rI.left, '+ מימין ל-i');
@@ -175,8 +169,6 @@
       cb.checked = true; cb.dispatchEvent(new Event('change', {bubbles:true}));
       applyHeights();
       assert(pseudo(pm) === '−', 'בפתוח: −');
-
-      // הפאנל גדל (maxHeight > 0)
       var mhOpen = parseFloat(getComputedStyle(panel).maxHeight);
       assert(mhOpen > 0 || panel.style.maxHeight.endsWith('px'), 'בפתוח: max-height > 0');
 
