--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       </div>
     </div>
 
-    <!-- רכיב 2.8 · חנוך בן פזי -->
+    <!-- רכיב 2.8 · רפאל צארום -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 2.8: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 2.8 · חנוך בן פזי</span></div>
@@ -235,7 +235,7 @@
       </div>
     </div>
 
-    <!-- רכיב 3.3 · חנוך בן פזי -->
+    <!-- רכיב 3.3 · הרב האריס -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 3.3: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 3.3 · חנוך בן פזי</span></div>
@@ -265,7 +265,7 @@
       </div>
     </div>
 
-    <!-- רכיב 4.3 · חנוך בן פזי -->
+    <!-- רכיב 4.3 · ריינהולד  -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.3: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 4.3 · חנוך בן פזי</span></div>
@@ -280,7 +280,7 @@
       </div>
     </div>
 
-    <!-- רכיב 4.6 · חנוך בן פזי -->
+    <!-- רכיב 4.6 · השפעת רוזנצווייג -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.6: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 4.6 · חנוך בן פזי</span></div>
@@ -295,7 +295,7 @@
       </div>
     </div>
 
-    <!-- רכיב 4.13 · חנוך בן פזי -->
+    <!-- רכיב 4.13 · טכנולוגיה ומדע - צבן -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.13.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.13: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 4.13 · חנוך בן פזי</span></div>
@@ -310,7 +310,7 @@
       </div>
     </div>
 
-    <!-- רכיב 5.6 · חנוך בן פזי -->
+    <!-- רכיב 5.6 · ג'ואנה בנהרוש -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.6: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 5.6 · חנוך בן פזי</span></div>
@@ -325,7 +325,7 @@
       </div>
     </div>
 
-    <!-- רכיב 5.9 · חנוך בן פזי -->
+    <!-- רכיב 5.9 · לורד וולפסון -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.9.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.9: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 5.9 · חנוך בן פזי</span></div>
@@ -340,7 +340,7 @@
       </div>
     </div>
 
-    <!-- רכיב 6.3 · חנוך בן פזי -->
+    <!-- רכיב 6.3 · אדם פרזינגר -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.3: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 6.3 · חנוך בן פזי</span></div>
@@ -355,7 +355,7 @@
       </div>
     </div>
 
-    <!-- רכיב 6.8 · חנוך בן פזי -->
+    <!-- רכיב 6.8 · חיים נריה -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.8: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 6.8 · חנוך בן פזי</span></div>
@@ -370,7 +370,7 @@
       </div>
     </div>
 
-    <!-- רכיב 6.11 · חנוך בן פזי -->
+    <!-- רכיב 6.11 · ג'ואן גרינאוויי -->
     <div class="vbt-card terms">
       <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.11.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.11: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">רכיב 6.11 · חנוך בן פזי</span></div>
