--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
 
     <!-- רכיב 2.8 · רפאל צארום -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 2.8: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 2.8 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 2.8 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 2.8: רפאל צארום, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 2.8 · רפאל צארום</span></div>
+        <div class="desc">דף מונחים של רכיב 2.8 – רפאל צארום. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
@@ -237,9 +237,9 @@
 
     <!-- רכיב 3.3 · הרב האריס -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 3.3: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 3.3 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 3.3 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 3.3: הרב האריס, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 3.3 · הרב האריס</span></div>
+        <div class="desc">דף מונחים של רכיב 3.3 – הרב האריס. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
@@ -267,9 +267,9 @@
 
     <!-- רכיב 4.3 · ריינהולד  -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.3: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 4.3 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 4.3 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.3: ריינהולד, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 4.3 · ריינהולד</span></div>
+        <div class="desc">דף מונחים של רכיב 4.3 – ריינהולד. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
@@ -282,9 +282,9 @@
 
     <!-- רכיב 4.6 · השפעת רוזנצווייג -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.6: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 4.6 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 4.6 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.6: השפעת רוזנצווייג, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 4.6 · השפעת רוזנצווייג</span></div>
+        <div class="desc">דף מונחים של רכיב 4.6 – השפעת רוזנצווייג. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
@@ -297,9 +297,9 @@
 
     <!-- רכיב 4.13 · טכנולוגיה ומדע - צבן -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.13.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.13: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 4.13 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 4.13 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.13.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.13: טכנולוגיה ומדע - צבן, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 4.13 · טכנולוגיה ומדע - צבן</span></div>
+        <div class="desc">דף מונחים של רכיב 4.13 – טכנולוגיה ומדע - צבן. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
@@ -312,9 +312,9 @@
 
     <!-- רכיב 5.6 · ג'ואנה בנהרוש -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.6: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 5.6 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 5.6 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.6: ג'ואנה בנהרוש, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 5.6 · ג'ואנה בנהרוש</span></div>
+        <div class="desc">דף מונחים של רכיב 5.6 – ג'ואנה בנהרוש. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
@@ -327,9 +327,9 @@
 
     <!-- רכיב 5.9 · לורד וולפסון -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.9.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.9: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 5.9 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 5.9 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.9.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.9: לורד וולפסון, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 5.9 · לורד וולפסון</span></div>
+        <div class="desc">דף מונחים של רכיב 5.9 – לורד וולפסון. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
@@ -342,9 +342,9 @@
 
     <!-- רכיב 6.3 · אדם פרזינגר -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.3: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 6.3 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 6.3 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.3: אדם פרזינגר, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 6.3 · אדם פרזינגר</span></div>
+        <div class="desc">דף מונחים של רכיב 6.3 – אדם פרזינגר. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
@@ -357,9 +357,9 @@
 
     <!-- רכיב 6.8 · חיים נריה -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.8: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 6.8 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 6.8 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.8: חיים נריה, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 6.8 · חיים נריה</span></div>
+        <div class="desc">דף מונחים של רכיב 6.8 – חיים נריה. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
@@ -372,9 +372,9 @@
 
     <!-- רכיב 6.11 · ג'ואן גרינאוויי -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.11.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.11: חנוך בן פזי, בטאב חדש">
-        <div class="row"><span class="icon">📚</span><span class="title">רכיב 6.11 · חנוך בן פזי</span></div>
-        <div class="desc">דף מונחים של רכיב 6.11 – חנוך בן פזי. נפתח בטאב חדש.</div><span class="chev">›</span>
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.11.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.11: ג'ואן גרינאוויי, בטאב חדש">
+        <div class="row"><span class="icon">📚</span><span class="title">רכיב 6.11 · ג'ואן גרינאוויי</span></div>
+        <div class="desc">דף מונחים של רכיב 6.11 – ג'ואן גרינאוויי. נפתח בטאב חדש.</div><span class="chev">›</span>
       </a>
       <div class="vbt-actions">
         <details class="copy"><summary>העתקת קישור</summary>
