--- a/test-terms.html
+++ b/test-terms.html
@@ -13,13 +13,18 @@
     .vbt-terms .vbt-toggle { position: absolute; inset: 0; opacity: 0; pointer-events: none; }
 
     .vbt-terms .vbt-summary {
-      display: flex; align-items: center; gap: 12px; direction: rtl; cursor: pointer;
+      display: flex; /* חזרה ל-flex בשביל יישור מושלם בשורה אחת */
+      align-items: center; justify-content: space-between; gap: 12px;
+      direction: rtl; cursor: pointer;
       padding: 14px 18px; border-radius: 40px; background: #F8E8FF; font-weight: 800; font-size: 18px;
       box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
       list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease, background-color .3s ease;
+      min-height: 56px; line-height: 1; /* שורה אחת קומפקטית */
     }
-    .vbt-terms .vbt-summary > .vbt-icon { order: 1; }
-    .vbt-terms .vbt-summary > .vbt-pm { order: 3; }
+    .vbt-terms .vbt-summary > * { align-self: center; }
+    .vbt-terms .vbt-summary > .vbt-icon { order: 1; flex: 0 0 auto; align-self: center; }
+    .vbt-terms .vbt-summary > .vbt-pm { order: 3; flex: 0 0 auto; align-self: center; }
+    .vbt-terms .vbt-title { order: 2; flex: 1 1 auto; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: center; }
     .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
     .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
     /* פתיחה: הקפסולה מתחלפת לירקרק */
@@ -30,6 +35,15 @@
       width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff; display: grid; place-items: center; font-weight: 900; transition: transform .35s ease, background-color .3s ease;
     }
     .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { background: #69DA98; transform: rotate(180deg); }
+
+    /* + / − – בקצה שמאל (ללא JS) */
+    .vbt-terms .vbt-pm {
+      grid-column: 3; justify-self: start;
+      width: 32px; height: 32px; display: inline-flex; align-items: center; justify-content: center;
+      font-size: 24px; line-height: 1; font-weight: 900;
+    }
+    .vbt-terms .vbt-pm::before { content: '+'; }
+    .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-pm::before { content: '−'; }
 
     .vbt-terms .vbt-panel {
       margin-top: 10px; background: #D7F6E4; border-radius: 14px; padding: 0 16px; line-height: 1.55;
@@ -53,7 +67,7 @@
         <input class="vbt-toggle" type="checkbox" id="vbt-t1" />
         <label class="vbt-summary" for="vbt-t1" role="button" tabindex="0" data-test-id="btn-1">
           <span class="vbt-pm" aria-hidden="true"></span>
-          <span class="vbt-title">הרב סולובייצ'יק</span>
+          <span class="vbt-title" style="white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">הרב סולובייצ'יק</span>
           <span class="vbt-icon" aria-hidden="true">i</span>
         </label>
         <div class="vbt-panel" data-test-id="panel-1">
@@ -66,7 +80,7 @@
         <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
         <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0" data-test-id="btn-2">
           <span class="vbt-pm" aria-hidden="true"></span>
-          <span class="vbt-title">הרבי מלובביץ'</span>
+          <span class="vbt-title" style="white-space:nowrap;overflow:hidden;text-overflow:ellipsis;">הרבי מלובביץ'</span>
           <span class="vbt-icon" aria-hidden="true">i</span>
         </label>
         <div class="vbt-panel" data-test-id="panel-2">
