--- a/course-map.html
+++ b/course-map.html
@@ -132,7 +132,7 @@
       ]},
 
       {"label":"מודולה 3 – המתודה הפרשנית","children":[
-        {"label":"מבוא לפרשנות עפ""י הרב זקס"},
+        {"label":"מבוא לפרשנות עפ\"י הרב זקס"},
         {"label":"מרבנות לפילוסופיה"},
         {"label":"פרופ' חנוך בן פזי על אתגרי הפרשנות הטקסטואלית"},
         {"label":"גישה פרשנית לטקסטים קשים"},
